利用findbug发现程序中隐藏的bug